test/analyze/type_check/function/function_params.exp
Error: Expected type `Bool` but found `Unit`
test/analyze/type_check/function/function_params.myte:14:3-5
 14 |   (p1: Bool);
    |    ^^

Error: Expected type `(Int) -> Bool` but found `(Int, String) -> Bool`
test/analyze/type_check/function/function_params.myte:15:3-5
 15 |   (p4: (Int) -> Bool);
    |    ^^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/function/function_params.myte:16:3-5
 16 |   (p5: Unit);
    |    ^^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/function/function_params.myte:20:5-7
 20 |     (p1: Unit);
    |      ^^

Error: Expected type `Unit` but found `String`
test/analyze/type_check/function/function_params.myte:23:7-9
 23 |       (p1: Unit);
    |        ^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/function/function_params.myte:24:7-9
 24 |       (p1: Int);
    |        ^^